TMA_1/y.output
Terminals unused in grammar

   WRITE
   CONSTRUCT
   ':'
   '.'
   ';'
   ','
   '('
   ')'
   '{'
   '}'
   '['
   ']'
   '+'
   '-'
   '<'
   '>'
   '*'
   '/'
   '%'


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: /* empty */
    3           | statements statement

    4 statement: lexical_element
    5          | punctuation
    6          | operator
    7          | reserved_word
    8          | exit
    9          | print_symbol_table

   10 print_symbol_table: PRINT_SYMBOL_TABLE

   11 lexical_element: LETTER
   12                | ALPHANUM
   13                | ID
   14                | DIGIT
   15                | INTEGER
   16                | FLOAT
   17                | NONZERO
   18                | FRACTION

   19 punctuation: SEMICOLON
   20            | COMMA
   21            | DOT
   22            | COLON
   23            | LEFTPAREN
   24            | RIGHTPAREN
   25            | LEFTBRACE
   26            | RIGHTBRACE
   27            | LEFTBRACKET
   28            | RIGHTBRACKET

   29 operator: PLUS
   30         | MINUS
   31         | MULTIPLY
   32         | DIVIDE
   33         | LESS
   34         | GREATER
   35         | ASSIGN
   36         | GOEQ
   37         | LOEQ
   38         | NEQ
   39         | ARROW
   40         | AND
   41         | OR
   42         | NOT

   43 reserved_word: ELSE
   44              | IF
   45              | FUNC
   46              | IMPLEMENT
   47              | CLASS
   48              | ATTRIBUTE
   49              | ISA
   50              | PRIVATE
   51              | PUBLIC
   52              | READ
   53              | RETURN
   54              | SELF
   55              | THEN
   56              | LOCAL
   57              | VOID
   58              | WHILE

   59 exit: EXIT


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'(' (40)
')' (41)
'*' (42)
'+' (43)
',' (44)
'-' (45)
'.' (46)
'/' (47)
':' (58)
';' (59)
'<' (60)
'>' (62)
'[' (91)
']' (93)
'{' (123)
'}' (125)
error (256)
IF (258) 44
ELSE (259) 43
THEN (260) 55
WHILE (261) 58
RETURN (262) 53
READ (263) 52
WRITE (264)
FUNC (265) 45
CLASS (266) 47
CONSTRUCT (267)
ATTRIBUTE (268) 48
IMPLEMENT (269) 46
ISA (270) 49
SELF (271) 54
PUBLIC (272) 51
PRIVATE (273) 50
LOCAL (274) 56
VOID (275) 57
SEMICOLON (276) 19
COMMA (277) 20
DOT (278) 21
COLON (279) 22
LEFTPAREN (280) 23
RIGHTPAREN (281) 24
LEFTBRACE (282) 25
RIGHTBRACE (283) 26
LEFTBRACKET (284) 27
RIGHTBRACKET (285) 28
PLUS (286) 29
MINUS (287) 30
MULTIPLY (288) 31
DIVIDE (289) 32
LESS (290) 33
GREATER (291) 34
ASSIGN (292) 35
GOEQ (293) 36
LOEQ (294) 37
NEQ (295) 38
ARROW (296) 39
AND (297) 40
OR (298) 41
NOT (299) 42
ID (300) 13
ALPHANUM (301) 12
INTEGER (302) 15
FLOAT (303) 16
FRACTION (304) 18
NONZERO (305) 17
LETTER (306) 11
DIGIT (307) 14
PRINT_SYMBOL_TABLE (308) 10
EXIT (309) 59


Nonterminals, with rules where they appear

$accept (72)
    on left: 0
program (73)
    on left: 1, on right: 0
statements (74)
    on left: 2 3, on right: 1 3
statement (75)
    on left: 4 5 6 7 8 9, on right: 3
print_symbol_table (76)
    on left: 10, on right: 9
lexical_element (77)
    on left: 11 12 13 14 15 16 17 18, on right: 4
punctuation (78)
    on left: 19 20 21 22 23 24 25 26 27 28, on right: 5
operator (79)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 6
reserved_word (80)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58, on right:
    7
exit (81)
    on left: 59, on right: 8


state 0

    0 $accept: . program $end

    $default  reduce using rule 2 (statements)

    program     go to state 1
    statements  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: statements .
    3 statements: statements . statement

    IF                  shift, and go to state 4
    ELSE                shift, and go to state 5
    THEN                shift, and go to state 6
    WHILE               shift, and go to state 7
    RETURN              shift, and go to state 8
    READ                shift, and go to state 9
    FUNC                shift, and go to state 10
    CLASS               shift, and go to state 11
    ATTRIBUTE           shift, and go to state 12
    IMPLEMENT           shift, and go to state 13
    ISA                 shift, and go to state 14
    SELF                shift, and go to state 15
    PUBLIC              shift, and go to state 16
    PRIVATE             shift, and go to state 17
    LOCAL               shift, and go to state 18
    VOID                shift, and go to state 19
    SEMICOLON           shift, and go to state 20
    COMMA               shift, and go to state 21
    DOT                 shift, and go to state 22
    COLON               shift, and go to state 23
    LEFTPAREN           shift, and go to state 24
    RIGHTPAREN          shift, and go to state 25
    LEFTBRACE           shift, and go to state 26
    RIGHTBRACE          shift, and go to state 27
    LEFTBRACKET         shift, and go to state 28
    RIGHTBRACKET        shift, and go to state 29
    PLUS                shift, and go to state 30
    MINUS               shift, and go to state 31
    MULTIPLY            shift, and go to state 32
    DIVIDE              shift, and go to state 33
    LESS                shift, and go to state 34
    GREATER             shift, and go to state 35
    ASSIGN              shift, and go to state 36
    GOEQ                shift, and go to state 37
    LOEQ                shift, and go to state 38
    NEQ                 shift, and go to state 39
    ARROW               shift, and go to state 40
    AND                 shift, and go to state 41
    OR                  shift, and go to state 42
    NOT                 shift, and go to state 43
    ID                  shift, and go to state 44
    ALPHANUM            shift, and go to state 45
    INTEGER             shift, and go to state 46
    FLOAT               shift, and go to state 47
    FRACTION            shift, and go to state 48
    NONZERO             shift, and go to state 49
    LETTER              shift, and go to state 50
    DIGIT               shift, and go to state 51
    PRINT_SYMBOL_TABLE  shift, and go to state 52
    EXIT                shift, and go to state 53

    $default  reduce using rule 1 (program)

    statement           go to state 54
    print_symbol_table  go to state 55
    lexical_element     go to state 56
    punctuation         go to state 57
    operator            go to state 58
    reserved_word       go to state 59
    exit                go to state 60


state 3

    0 $accept: program $end .

    $default  accept


state 4

   44 reserved_word: IF .

    $default  reduce using rule 44 (reserved_word)


state 5

   43 reserved_word: ELSE .

    $default  reduce using rule 43 (reserved_word)


state 6

   55 reserved_word: THEN .

    $default  reduce using rule 55 (reserved_word)


state 7

   58 reserved_word: WHILE .

    $default  reduce using rule 58 (reserved_word)


state 8

   53 reserved_word: RETURN .

    $default  reduce using rule 53 (reserved_word)


state 9

   52 reserved_word: READ .

    $default  reduce using rule 52 (reserved_word)


state 10

   45 reserved_word: FUNC .

    $default  reduce using rule 45 (reserved_word)


state 11

   47 reserved_word: CLASS .

    $default  reduce using rule 47 (reserved_word)


state 12

   48 reserved_word: ATTRIBUTE .

    $default  reduce using rule 48 (reserved_word)


state 13

   46 reserved_word: IMPLEMENT .

    $default  reduce using rule 46 (reserved_word)


state 14

   49 reserved_word: ISA .

    $default  reduce using rule 49 (reserved_word)


state 15

   54 reserved_word: SELF .

    $default  reduce using rule 54 (reserved_word)


state 16

   51 reserved_word: PUBLIC .

    $default  reduce using rule 51 (reserved_word)


state 17

   50 reserved_word: PRIVATE .

    $default  reduce using rule 50 (reserved_word)


state 18

   56 reserved_word: LOCAL .

    $default  reduce using rule 56 (reserved_word)


state 19

   57 reserved_word: VOID .

    $default  reduce using rule 57 (reserved_word)


state 20

   19 punctuation: SEMICOLON .

    $default  reduce using rule 19 (punctuation)


state 21

   20 punctuation: COMMA .

    $default  reduce using rule 20 (punctuation)


state 22

   21 punctuation: DOT .

    $default  reduce using rule 21 (punctuation)


state 23

   22 punctuation: COLON .

    $default  reduce using rule 22 (punctuation)


state 24

   23 punctuation: LEFTPAREN .

    $default  reduce using rule 23 (punctuation)


state 25

   24 punctuation: RIGHTPAREN .

    $default  reduce using rule 24 (punctuation)


state 26

   25 punctuation: LEFTBRACE .

    $default  reduce using rule 25 (punctuation)


state 27

   26 punctuation: RIGHTBRACE .

    $default  reduce using rule 26 (punctuation)


state 28

   27 punctuation: LEFTBRACKET .

    $default  reduce using rule 27 (punctuation)


state 29

   28 punctuation: RIGHTBRACKET .

    $default  reduce using rule 28 (punctuation)


state 30

   29 operator: PLUS .

    $default  reduce using rule 29 (operator)


state 31

   30 operator: MINUS .

    $default  reduce using rule 30 (operator)


state 32

   31 operator: MULTIPLY .

    $default  reduce using rule 31 (operator)


state 33

   32 operator: DIVIDE .

    $default  reduce using rule 32 (operator)


state 34

   33 operator: LESS .

    $default  reduce using rule 33 (operator)


state 35

   34 operator: GREATER .

    $default  reduce using rule 34 (operator)


state 36

   35 operator: ASSIGN .

    $default  reduce using rule 35 (operator)


state 37

   36 operator: GOEQ .

    $default  reduce using rule 36 (operator)


state 38

   37 operator: LOEQ .

    $default  reduce using rule 37 (operator)


state 39

   38 operator: NEQ .

    $default  reduce using rule 38 (operator)


state 40

   39 operator: ARROW .

    $default  reduce using rule 39 (operator)


state 41

   40 operator: AND .

    $default  reduce using rule 40 (operator)


state 42

   41 operator: OR .

    $default  reduce using rule 41 (operator)


state 43

   42 operator: NOT .

    $default  reduce using rule 42 (operator)


state 44

   13 lexical_element: ID .

    $default  reduce using rule 13 (lexical_element)


state 45

   12 lexical_element: ALPHANUM .

    $default  reduce using rule 12 (lexical_element)


state 46

   15 lexical_element: INTEGER .

    $default  reduce using rule 15 (lexical_element)


state 47

   16 lexical_element: FLOAT .

    $default  reduce using rule 16 (lexical_element)


state 48

   18 lexical_element: FRACTION .

    $default  reduce using rule 18 (lexical_element)


state 49

   17 lexical_element: NONZERO .

    $default  reduce using rule 17 (lexical_element)


state 50

   11 lexical_element: LETTER .

    $default  reduce using rule 11 (lexical_element)


state 51

   14 lexical_element: DIGIT .

    $default  reduce using rule 14 (lexical_element)


state 52

   10 print_symbol_table: PRINT_SYMBOL_TABLE .

    $default  reduce using rule 10 (print_symbol_table)


state 53

   59 exit: EXIT .

    $default  reduce using rule 59 (exit)


state 54

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


state 55

    9 statement: print_symbol_table .

    $default  reduce using rule 9 (statement)


state 56

    4 statement: lexical_element .

    $default  reduce using rule 4 (statement)


state 57

    5 statement: punctuation .

    $default  reduce using rule 5 (statement)


state 58

    6 statement: operator .

    $default  reduce using rule 6 (statement)


state 59

    7 statement: reserved_word .

    $default  reduce using rule 7 (statement)


state 60

    8 statement: exit .

    $default  reduce using rule 8 (statement)
